# GameCreatorEngine

./: CMakeLists.txt  CreateVisualStudioProject.bat  README.txt
res/: Windows-update-resources.bat
res/OS-Windows/lib/soil/lib/: SOIL.lib
res/Shaders/: Basic.fs  Basic.vs  Fragment.glsl  Sprite.fs  Sprite.vs  Sprite_fs.glsl  Sprite_vs.glsl  TCS.glsl  TES.glsl  Vertex.glsl
src/: Camera.cpp  Camera.h  GBuffer.cpp  GBuffer.h  GLTexture.h  Game.h  GameObject.cpp  GameObject.h  IOManager.cpp  IOManager.h  ImageLoader.cpp  ImageLoader.h  Input.cpp  Input.h  Lights.h  Logger.cpp  Logger.h  Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h  PicoPNG.h  ProfileTimer.cpp  ProfileTimer.h  RenderingEngine.cpp  RenderingEngine.h  SOIL.h  Shader.h  ShaderObject.cpp  ShaderObject.h  ShaderObjectCache.cpp  ShaderObjectCache.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgramCache.cpp  ShaderProgramCache.h  Source.cpp  Sprite.cpp  Sprite.h  SpriteBatch.cpp  (+11 more)
